--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,22 @@
     <title>React App</title>
   </head>
   <body>
+    <form
+      name="contact"
+      netlify
+      netlify-honeypot="bot-field"
+      data-netlify-recaptcha="true"
+      data-netlify="true"
+      hidden
+    >
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="text" name="company name" />
+      <div data-netlify-recaptcha="true"></div>
+      <p>
+        <button type="submit">Send</button>
+      </p>
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
