--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
         <button type="submit">Send</button>
       </p>
     </form>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <div id="root"></div>
   </body>
 </html>
